[project]
name = "edm2-refiners"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "limiteinductive", email = "benjamintrom@gmail.com" }
]
dependencies = [
    "refiners @ git+https://github.com/finegrain-ai/refiners.git",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/edm2_refiners"]
